mobile menu btn spacing fix

--- a/_sass/temple/_header.scss
+++ b/_sass/temple/_header.scss
@@ -236,9 +236,12 @@ header.tla-header {
         }
       }
 
+      .menu-link-mobile {
+        padding-left: 0;
+      }
+
       .menu-link-mobile-text {
         line-height: -3px;
-        padding-left: 0;
       }
     }
   }
